--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 
 body {
     font-family: 'Roboto Slab', 'M Plus 1p';
